# bmfont_to_cpp

./: CMakeLists.txt  COPYING  README.md  bmfont_to_cpp.cpp  bmfont_to_cpp.sln  bmfont_to_cpp.vcxproj  bmfont_to_cpp.vcxproj.filters
src/bmfont_to_cpp/: CMakeLists.txt
src/bmfont_to_cpp/src/: bmfont_to_cpp.cpp
src/bmfont_to_cpp_sdl2_example/: CMakeLists.txt
src/bmfont_to_cpp_sdl2_example/data/bmdata/: bmf.fnt  bmf_0.dds  bmf_1.dds
src/bmfont_to_cpp_sdl2_example/src/: bmfont_to_cpp_sdl2_example.cpp
src/bmfont_to_cpp_sdl2_example/src/include/: bmf.h
